[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["nadyash83 <bezborodova@pkkb1.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
